# ocpp-server

./: .bazelproject  README.md  WORKSPACE
java/app/simpleserver/: BUILD.bazel
java/app/simpleserver/logs/: boot1.txt
java/app/simpleserver/src/main/install/config/: connector.toml  parameters.toml
java/app/simpleserver/src/main/install/log/: LEEME.txt
java/app/simpleserver/src/main/install/systemd/: launch.sh  ocpp-engine.service
java/app/simpleserver/src/main/java/es/uji/ocpp/simpleserver/: IEnviromentFactory.java  Launcher.java  SimpleConnector.java  SimpleParameters.java
java/app/simpleserver/src/main/java/es/uji/ocpp/simpleserver/env/: DevEnviroment.java  Enviroment.java  ProdEnviroment.java
java/app/simpleserver/src/main/resources/boot/: boot2.txt  boot3.txt
java/app/simpleserver/src/main/resources/dev/config/: connector.toml
java/engine/: BUILD.bazel
java/engine/src/main/install/config/: connector.toml
java/engine/src/main/install/systemd/: LEEME.txt  launch.sh
java/engine/src/main/java/padilla/ocpp/engine/: OcppParameters.java
java/engine/src/main/java/padilla/ocpp/engine/impl/: EngineImpl.java  ServerHandler.java  SessionHandler.java  StringUtil.java
java/engine/src/main/java/padilla/ocpp/engine/impl/session/: SessionException.java  SessionInstance.java
java/engine/src/main/java/padilla/ocpp/engine/launcher/: EngineLauncher.java  SimpleConnector.java  SimpleParameters.java
java/joanpadilla/core/engine/: BUILD.bazel
java/joanpadilla/core/engine/src/main/java/joanpadilla/ocpp/engine/impl/: EngineImpl.java  ServerCoreEventHandlerImpl.java  ServerEventsImpl.java  ServerHandler.java  SessionHandler.java
java/ocpp/common/: BUILD.bazel
java/ocpp/common/src/main/java/eu/chargetime/ocpp/: AsyncPromiseFulfillerDecorator.java  Client.java  Communicator.java  ConfirmationHandler.java  FeatureRepository.java  IFeatureRepository.java  IPromiseRepository.java  ISession.java  PromiseFulfiller.java  PromiseRepository.java  Queue.java  RequestDispatcher.java  Server.java  ServerEvents.java  Session.java  SimplePromiseFulfiller.java  ZonedDateTimeAdapter.java
java/ocpp/common/src/main/java/eu/chargetime/ocpp/feature/: Feature.java  ProfileFeature.java
java/ocpp/common/src/main/java/eu/chargetime/ocpp/feature/profile/: Profile.java
java/ocpp/common/src/main/java/eu/chargetime/ocpp/model/: SessionInformation.java  TestModel.java
java/ocpp/common/src/main/java/eu/chargetime/ocpp/model/validation/: ValidatorBuilder.java
java/ocpp/common/src/main/java/eu/chargetime/ocpp/utilities/: Stopwatch.java  SugarUtil.java  TestUtilities.java  TimeoutTimer.java
java/ocpp/json/: BUILD.bazel
java/ocpp/json/src/main/java/eu/chargetime/ocpp/: JSONCommunicator.java  WebSocketListener.java  WebSocketReceiver.java  WebSocketTransmitter.java
java/ocpp/json/src/main/java/eu/chargetime/ocpp/wss/: BaseWssFactoryBuilder.java  BaseWssSocketBuilder.java  CustomSSLWebSocketServerFactory.java
java/ocpp/v1_6/: BUILD.bazel
java/ocpp/v1_6/src/main/java/eu/chargetime/ocpp/: IClientAPI.java  IServerAPI.java  JSONClient.java  JSONServer.java  SOAPClient.java  SOAPCommunicator.java  SOAPMessageInfo.java  SOAPServer.java  SOAPSyncHelper.java  TimeoutSessionDecorator.java  WSHttpHandler.java  WebServiceListener.java  WebServiceReceiver.java  WebServiceTransmitter.java
java/ocpp/v1_6/src/main/java/eu/chargetime/ocpp/feature/profile/: ClientCoreProfile.java  ClientFirmwareManagementProfile.java  ClientLocalAuthListProfile.java  ClientRemoteTriggerProfile.java  ClientReservationProfile.java  ClientSmartChargingProfile.java  ServerCoreEventHandler.java  ServerCoreProfile.java  ServerFirmwareManagementEventHandler.java  ServerFirmwareManagementProfile.java  ServerLocalAuthListProfile.java  ServerRemoteTriggerProfile.java  ServerReservationProfile.java  ServerSmartChargingProfile.java
java/ocpp/v1_6/src/main/java/eu/chargetime/ocpp/model/: SOAPHostInfo.java
java/ocpp/v1_6/src/main/java/eu/chargetime/ocpp/model/core/: AuthorizeConfirmation.java  AuthorizeRequest.java  BootNotificationConfirmation.java  (+36 more)
java/old/engine/: BUILD.bazel
java/old/engine/src/main/install/config/: connector.toml  log.properties
java/old/engine/src/main/install/systemd/: LEEME.txt  launch.sh  ocpp-engine.service
java/old/engine/src/main/java/padilla/ocpp/engine/old/: OcppConnector.java  OcppEngine.java  OcppParameters.java
java/old/engine/src/main/resources/dev/config/: log.properties  parameters.toml
java/padilla/server/simple/: BUILD.bazel  boot1.txt  boot2.txt  boot3.txt
java/padilla/server/simple/src/main/install/config/: connector.toml  log.properties
java/padilla/server/simple/src/main/install/systemd/: LEEME.txt  launch.sh  ocpp-server.service
java/server/app/simple/: BUILD.bazel
java/server/example/: BUILD.bazel
java/server/example/src/main/java/joanpadilla/ocpp/simpleserver/: Main.java  ServerCoreEventHandlerImpl.java  ServerEventsImpl.java
java/server/example/src/main/java/jtpadilla/ocpp/simpleserver/: Main.java  ServerCoreEventHandlerImpl.java  ServerEventsImpl.java
java/simulator/eu_chargetime/app/: BUILD.bazel
java/simulator/eu_chargetime/facades/: BUILD.bazel
java/simulator/eu_chargetime/facades/src/main/java/eu/chargetime/simulator/: ChargeBox.java  ChargeBoxFirmware.java
java/simulator/eu_chargetime/ocpp/: BUILD.bazel
java/simulator/ocpp/: BUILD.bazel
java/websocket/examples/: BUILD.bazel
java/websocket/examples/src/main/java/websocket/example/: ChatServer.java  ChatServerAttachment.java  ChatServerAttachmentExample.java  ChatServerExample.java  ChatServerSimple.java  CustomHeaderClientExample.java  ExampleClient.java  FragmentedFramesExample.java  PerMessageDeflateExample.java  ProxyClientExample.java  ReconnectClientExample.java  SSLClientExample.java  SSLServerCustomWebsocketFactoryExample.java  SSLServerExample.java  SSLServerLetsEncryptExample.java  SecWebSocketProtocolClientExample.java  SecWebSocketProtocolServerExample.java  ServerAdditionalHeaderExample.java  ServerRejectHandshakeExample.java  ServerStressTest.java  TwoWaySSLServerExample.java
(+104 files in other folders)
