package(default_visibility = ["//visibility:public"])

load("@rules_pkg//:pkg.bzl", "pkg_tar")

java_library(
    name = "engine",
    srcs = glob(["src/main/java/**/*.java"]),
    exports = [
        "@maven//:eu_chargetime_ocpp_common",
        "@maven//:eu_chargetime_ocpp_v1_6",
    ],
    deps = [
        "@maven//:com_moandjiezana_toml_toml4j",
        "@maven//:eu_chargetime_ocpp_common",
        "@maven//:eu_chargetime_ocpp_v1_6",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
