package(default_visibility = ["//visibility:public"])

java_library(
    name = "common",
    srcs = glob(["src/main/java/**/*.java"]),
    exports = [
        "@maven//:javax_xml_bind_jaxb_api",
        "@maven//:javax_xml_soap_javax_xml_soap_api",
    ],
    deps = [
        "@maven//:javax_xml_bind_jaxb_api",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:javax_xml_soap_javax_xml_soap_api",
    ],
)
