package(default_visibility = ["//visibility:public"])

java_library(
    name = "json",
    srcs = glob(["src/main/java/**/*.java"]),
    exports = [
        "@maven//:org_java_websocket_Java_WebSocket",
    ],
    deps = [
        "//java/ocpp/common",
        "@maven//:com_google_code_gson_gson",
        "@maven//:org_java_websocket_Java_WebSocket",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
