package(default_visibility = ["//visibility:public"])

java_library(
    name = "common",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/*"]),
    deps = [
        "//java/ocpp/common",
        "//java/ocpp/json",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
