package(default_visibility = ["//visibility:public"])

java_library(
    name = "v1_6",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/*"]),
    exports = [
        "//java/ocpp/json",
    ],
    deps = [
        "//java/ocpp/json",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
