package(default_visibility = ["//visibility:public"])
load("@rules_pkg//:pkg.bzl", "pkg_tar")

java_library(
    name = "old-engine",
    srcs = glob(["src/main/java/**/*.java"]),
    exports = [
        "@maven//:eu_chargetime_ocpp_v1_6",
        "@maven//:eu_chargetime_ocpp_common",
    ],
    deps = [
        "@maven//:eu_chargetime_ocpp_v1_6",
        "@maven//:eu_chargetime_ocpp_common",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:com_moandjiezana_toml_toml4j",
    ],
)

java_binary(
    name = "old-engine-launcher",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "padilla.ocpp.engine.old.launcher.EngineLauncher",
    runtime_deps = [
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_jdk14",
    ],
    deps = [
        ":old-engine",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:com_moandjiezana_toml_toml4j",
    ],
)

pkg_tar(
    name = "old-engine-install",
    extension = "tar.gz",
    strip_prefix = "./src/main/install",
    srcs = glob(["src/main/install/**"]),
    mode = "0766"
)

pkg_tar(
    name = "old-engine-deploy",
    extension = "tar.gz",
    strip_prefix = ".",
    package_dir = "/ocpp-engine",
    srcs = [":old-engine-launcher_deploy.jar",],
    deps = [
        ":old-engine-install"
    ],
    mode = "0766"
)
