package(default_visibility = ["//visibility:public"])

java_binary(
    name = "example",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "joanpadilla.ocpp.simpleserver.Main",
    deps = [
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_jdk14",
        "@maven//:com_google_inject_guice",
        "//java/ocpp/v1_6",
        #"@maven//:eu_chargetime_ocpp_common",
        #"@maven//:eu_chargetime_ocpp_v1_6",
    ],
)
