package(default_visibility = ["//visibility:public"])

load("@rules_pkg//:pkg.bzl", "pkg_tar")

java_binary(
    name = "chatserver",
    srcs = glob([
        "src/main/java/websocket/example/ChatServer.java",
        "src/main/java/websocket/example/ChatServerSimple.java",
    ]),
    main_class = "websocket.example.ChatServerSimple",
    runtime_deps = [
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_jdk14",
    ],
    deps = [
        "@maven//:javax_xml_bind_jaxb_api",
        "@maven//:org_java_websocket_Java_WebSocket",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_binary(
    name = "serverstresstest",
    srcs = glob([
        "src/main/java/websocket/example/ServerStressTest.java",
    ]),
    main_class = "websocket.example.ServerStressTest",
    runtime_deps = [
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_jdk14",
    ],
    deps = [
        "@maven//:javax_xml_bind_jaxb_api",
        "@maven//:org_java_websocket_Java_WebSocket",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
