package(default_visibility = ["//visibility:public"])

java_library(
    name = "engine",
    srcs = glob(["src/main/java/**/*.java"]),
    exports = [
        "//java/joanpadilla/core/model",
    ],
    deps = [
        "//java/joanpadilla/core/model",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
