package(default_visibility = ["//visibility:public"])

java_binary(
    name = "example",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "joanpadilla.ocpp.server.simple.Main",
    runtime_deps = [
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_jdk14",
    ],
    deps = [
        "@maven//:org_slf4j_slf4j_api",
        "//java/server/lib/engine",
    ],
)
