package(default_visibility = ["//visibility:public"])

java_binary(
    name = "app",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "eu.chargetime.simulator.app.Program",
    deps = [
        "//java/simulator/eu_chargetime/facades",
        "//java/simulator/eu_chargetime/software",
    ],
)
