package(default_visibility = ["//visibility:public"])

java_library(
    name = "facades",
    srcs = glob(["src/main/java/**/*.java"]),
    exports = [
        "//java/simulator/eu_chargetime/ocpp",
    ],
    deps = [
        "//java/simulator/eu_chargetime/hardware",
        "//java/simulator/eu_chargetime/ocpp",
    ],
)
