package(default_visibility = ["//visibility:public"])

java_library(
    name = "ocpp",
    srcs = glob(["src/main/java/**/*.java"]),
    exports = [
        "@maven//:eu_chargetime_ocpp_v1_6",
        "@maven//:eu_chargetime_ocpp_common",
        "//java/simulator/eu_chargetime/software",
    ],
    deps = [
        "@maven//:eu_chargetime_ocpp_v1_6",
        "@maven//:eu_chargetime_ocpp_common",
        "//java/simulator/eu_chargetime/software",
    ],
)
